Fixing sticky ceilings and adding an HUD

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -7,6 +7,52 @@
 			<div class = "viewport-background" cv-each = "blocks:block:b" cv-ref = "background">[[block]]</div>
 			<div class = "viewport-content" cv-each = "actors:actor:a">[[actor]]</div>
 		</div>
+		<div class = "hud">
+			<table>
+
+				<tr>
+					<td>[[labelX]]</td>
+					<td>[[xPos]]</td>
+				</tr>
+
+				<tr>
+					<td>[[labelY]]</td>
+					<td>[[yPos]]</td>
+				</tr>
+
+				<tr>
+					<td>[[labelAngle]]</td>
+					<td>[[angle]]</td>
+				</tr>
+
+				<tr>
+					<td>[[labelMode]]</td>
+					<td>[[mode]]</td>
+				</tr>
+
+				<tr>
+					<td>[[labelGround]]</td>
+					<td>[[ground]]</td>
+				</tr>
+
+				<tr>
+					<td>[[labelGSpeed]]</td>
+					<td>[[gSpeed]]</td>
+				</tr>
+
+				<tr>
+					<td>[[labelXSpeed]]</td>
+					<td>[[xSpeed]]</td>
+				</tr>
+
+				<tr>
+					<td>[[labelYSpeed]]</td>
+					<td>[[ySpeed]]</td>
+				</tr>
+
+
+			</table>
+		</div>
 	</div>
 
 	<div class = "viewport-caption">
