More intuative UI

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -1,8 +1,8 @@
-<div class = "frame">
+<div class = "viewport-frame" cv-ref = "frame">
 	<div class = "viewport-header">
 		<span class = "sean-icon"></span><h1>Pixel Physics</h1>
 	</div>
-	<div class = "viewport" cv-ref = "viewport" cv-on = "mousemove(event)">
+	<div class = "viewport" cv-ref = "viewport" tabindex="0">
 		<div class = "viewport-zoom">
 			<div class = "viewport-background" cv-each = "blocks:block:b" cv-ref = "background">[[block]]</div>
 			<div class = "viewport-content" cv-each = "actors:actor:a">[[actor]]</div>
@@ -53,37 +53,57 @@
 
 			</table>
 		</div>
+
+		<div class = "focus-me">Focus this element to enable keyboard control</div>
 	</div>
 
 	<div class = "viewport-caption">
 		<div>
-			<i>(enlarged to show texture)</i>
-		</div>
-		<div>
 			<div>
+				<i>(pixels enlarged to show texture)</i>
+
+
 				<span>
-					<span class = "arrow-west"></span> / <span class = "arrow-east"></span> move
+					<span class = "button ps-x"></span>
+					/ <span class = "button xb-a"></span>
+					/ <b>spacebar</b>
+					- jump
 				</span>
 
 				<span>
-					<span class = "button ps-x"></span> / <span class = "button xb-a"></span> / spacebar - jump
-				</span>
-
-				<span>
-					<span class = "button ps-l1"></span> / <span class = "button xb-b"></span> / <span class = "button ps-o"></span>
-					/ <b>ctrl</b> - run
+					<span class = "button ps-o"></span>
+					/ <span class = "button xb-b"></span>
+					/ <b>ctrl</b>
+					- run
 				</span>
 
 				<span>
 					<span class = "button ps-r1"></span>
-					/ <b>shift</b> - creep
+					/ <span class = "button xb-rb"></span>
+					/ <b>shift</b>
+					- creep
+				</span>
+
+				<span>
+					<span class = "arrow-west"></span>
+					/ <span class = "arrow-east"></span>
+					move
 				</span>
 			</div>
 
-			<label>
-				<input type = "checkbox" cv-bind = "sticky" value = "1" />
-				stick to walls
-			</label>
+			<div class = "right">
+
+				<label>
+					scale
+					<input type = "number" cv-bind = "scale" min = "1"/>
+				</label>
+
+				<label>
+					stick to walls
+					<input type = "checkbox" cv-bind = "sticky" value = "1" />
+				</label>
+
+			</div>
 		</div>
 	</div>
 
