--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -62,11 +62,17 @@
 			<div>
 				<i>(pixels enlarged to show texture)</i>
 
+				<span>
+					<span class = "arrow-west"></span>
+					/ <span class = "arrow-east"></span>
+					/ <b>wasd</b>
+					- move
+				</span>
 
 				<span>
 					<span class = "button ps-x"></span>
 					/ <span class = "button xb-a"></span>
-					/ <b>spacebar</b>
+					/ <b>space</b>
 					- jump
 				</span>
 
@@ -84,11 +90,7 @@
 					- creep
 				</span>
 
-				<span>
-					<span class = "arrow-west"></span>
-					/ <span class = "arrow-east"></span>
-					move
-				</span>
+
 			</div>
 
 			<div class = "right">
@@ -100,7 +102,12 @@
 
 				<label>
 					stick to walls
-					<input type = "checkbox" cv-bind = "sticky" value = "1" />
+					<input type = "checkbox" cv-bind = "willStick" value = "1" />
+				</label>
+
+				<label>
+					stay on walls
+					<input type = "checkbox" cv-bind = "stayStuck" value = "1" />
 				</label>
 
 			</div>
