--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -10,89 +10,96 @@
 			<div class = "viewport-content" cv-each = "actors:actor:a">[[actor]]</div>
 		</div>
 
-		<div class = "hud">
-			<table>
+		<div class = "viewport-double-zoom">
+			<div class = "hud">
+				<table>
 
-				<tr>
-					<td>[[labelX]]</td>
-					<td>[[xPos]]</td>
-				</tr>
+					<tr>
+						<td>[[labelX]]</td>
+						<td>[[xPos]]</td>
+					</tr>
 
-				<tr>
-					<td>[[labelY]]</td>
-					<td>[[yPos]]</td>
-				</tr>
-
-				<tr>
-					<td>[[labelAngle]]</td>
-					<td>[[angle]]</td>
-				</tr>
-
-				<tr>
-					<td>[[labelMode]]</td>
-					<td>[[mode]]</td>
-				</tr>
-
-				<tr>
-					<td>[[labelGround]]</td>
-					<td>[[ground]]</td>
-				</tr>
-
-				<tr>
-					<td>[[labelGSpeed]]</td>
-					<td>[[gSpeed]]</td>
-				</tr>
-
-				<tr>
-					<td>[[labelXSpeed]]</td>
-					<td>[[xSpeed]]</td>
-				</tr>
-
-				<tr>
-					<td>[[labelYSpeed]]</td>
-					<td>[[ySpeed]]</td>
-				</tr>
+					<tr>
+						<td>[[labelY]]</td>
+						<td>[[yPos]]</td>
+					</tr>
 
 
-			</table>
-		</div>
+					<tr>
+						<td>[[labelMode]]</td>
+						<td>[[mode]]</td>
+					</tr>
 
-		<div class = "titlecard [[animation]]">
+					<tr>
+						<td>[[labelGround]]</td>
+						<td>[[ground]]</td>
+					</tr>
 
-			<div class = "titlecard-field"></div>
+					<tr>
+						<td>[[labelAngle]]</td>
+						<td>[[angle]]</td>
+					</tr>
 
-			<div class = "titlecard-bottom-border">
-				<div class = "titlecard-border-text">SEAN MORRIS</div>
+					<tr>
+						<td>[[labelAirAngle]]</td>
+						<td>[[airAngle]]</td>
+					</tr>
+
+					<tr>
+						<td>[[labelGSpeed]]</td>
+						<td>[[gSpeed]]</td>
+					</tr>
+
+					<tr>
+						<td>[[labelXSpeed]]</td>
+						<td>[[xSpeed]]</td>
+					</tr>
+
+					<tr>
+						<td>[[labelYSpeed]]</td>
+						<td>[[ySpeed]]</td>
+					</tr>
+
+
+				</table>
 			</div>
 
-			<div class = "titlecard-left-border">
-				<div class = "titlecard-border-shadow"></div>
-				<div class = "titlecard-border-color"></div>
-			</div>
+			<div class = "titlecard [[animation]]">
 
-			<div class = "titlecard-title">
-				<div class = "titlecard-title-box">
+				<div class = "titlecard-field"></div>
 
-					<div class = "titlecard-title-line-1">
-						PIXEL HILL
-					</div>
-
-					<div class = "titlecard-title-line-2">
-						ZONE<div class = "titlecard-title-number">
-							1
-						</div>
-					</div>
-
-
+				<div class = "titlecard-bottom-border">
+					<div class = "titlecard-border-text">SEAN MORRIS</div>
 				</div>
+
+				<div class = "titlecard-left-border">
+					<div class = "titlecard-border-shadow"></div>
+					<div class = "titlecard-border-color"></div>
+				</div>
+
+				<div class = "titlecard-title">
+					<div class = "titlecard-title-box">
+
+						<div class = "titlecard-title-line-1">
+							PIXEL HILL
+						</div>
+
+						<div class = "titlecard-title-line-2">
+							ZONE<div class = "titlecard-title-number">
+								1
+							</div>
+						</div>
+
+
+					</div>
+				</div>
+
+			</div>
+			<div class = "focus-me">
+				<div class = "status-message">[[status]]</div>
 			</div>
 
 		</div>
-
-		<div class = "focus-me">
-			<div class = "status-message">[[status]]</div>
-		</div>
-
 	</div>
 
 	<div class = "viewport-caption">
@@ -154,7 +161,9 @@
 
 				<label>
 					scale&nbsp;
-					<input type = "number" cv-bind = "scale" min = "1"/>
+					<form>
+						<input type = "number" cv-bind = "scale" min = "1" max = "5" />
+					</form>
 				</label>
 
 			</div>
