Solid physics and basic object interaction

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -41,13 +41,13 @@
 					</tr>
 
 					<tr>
-						<td>[[labelAirAngle]]</td>
-						<td>[[airAngle]]</td>
+						<td>[[labelGSpeed]]</td>
+						<td>[[gSpeed]]</td>
 					</tr>
 
 					<tr>
-						<td>[[labelGSpeed]]</td>
-						<td>[[gSpeed]]</td>
+						<td>[[labelAirAngle]]</td>
+						<td>[[airAngle]]</td>
 					</tr>
 
 					<tr>
@@ -105,30 +105,35 @@
 	<div class = "viewport-caption">
 		<div>
 			<div>
-				<span class = "label"><i>(pixels enlarged to show texture)</i></span>
-
-				<span>
-					<span class = "arrow-west"></span>
-					/ <span class = "arrow-east"></span>
+				<span class = "button-index">
+					<span class = "arrow button arrow-west"></span>
+					/ <span class = "arrow button arrow-east"></span>
 					/ <b>wasd</b>
 					- move
 				</span>
 
-				<span>
+				<span class = "button-index">
 					<span class = "button ps-x"></span>
 					/ <span class = "button xb-a"></span>
 					/ <b>space</b>
 					- jump
 				</span>
 
-				<span>
+				<span class = "button-index">
 					<span class = "button ps-o"></span>
 					/ <span class = "button xb-b"></span>
 					/ <b>ctrl</b>
 					- run
 				</span>
 
-				<span>
+				<span class = "button-index">
+					<span class = "button ps-l1"></span>
+					/ <span class = "button xb-lb"></span>
+					/ <b>ctrl</b>
+					- run
+				</span>
+
+				<span class = "button-index">
 					<span class = "button ps-r1"></span>
 					/ <span class = "button xb-rb"></span>
 					/ <b>shift</b>
@@ -145,6 +150,8 @@
 			</div>
 
 			<div class = "right">
+
+				<span class = "label"><i>(pixels enlarged to show texture)</i></span>
 
 				<label>
 					player can stop on walls
