Correctly preserve momentum when switching to ceiling mode.

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -137,7 +137,7 @@
 					<span class = "button ps-r1"></span>
 					/ <span class = "button xb-rb"></span>
 					/ <b>shift</b>
-					- creep
+					- brakes
 				</span>
 
 
