--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -15,6 +15,16 @@
 				<table>
 
 					<tr>
+						<td>[[labelGround]]</td>
+						<td>[[ground]]</td>
+					</tr>
+
+					<tr>
+						<td>[[labelMode]]</td>
+						<td>[[mode]]</td>
+					</tr>
+
+					<tr>
 						<td>[[labelX]]</td>
 						<td>[[xPos]]</td>
 					</tr>
@@ -26,23 +36,13 @@
 
 
 					<tr>
-						<td>[[labelMode]]</td>
-						<td>[[mode]]</td>
-					</tr>
-
-					<tr>
-						<td>[[labelGround]]</td>
-						<td>[[ground]]</td>
+						<td>[[labelGSpeed]]</td>
+						<td>[[gSpeed]]</td>
 					</tr>
 
 					<tr>
 						<td>[[labelAngle]]</td>
 						<td>[[angle]]</td>
-					</tr>
-
-					<tr>
-						<td>[[labelGSpeed]]</td>
-						<td>[[gSpeed]]</td>
 					</tr>
 
 					<tr>
@@ -60,6 +60,10 @@
 						<td>[[ySpeed]]</td>
 					</tr>
 
+					<tr>
+						<td>[[labelFps]]</td>
+						<td>[[fpsSprite]]</td>
+					</tr>
 
 				</table>
 			</div>
@@ -153,12 +157,12 @@
 				<label>
 					<button cv-on = "click:fullscreen(event)">fullscreen</button>
 				</label>
-				<small>(esc to revert)</small>
+				<small><small>(esc to revert)</small></small>
 			</div>
 
 			<div class = "right">
 
-				<label>
+<!-- 				<label>
 					<small>player character:</small>
 					<select>
 						<option value = "nuke-ball">nuclear superball</option>
@@ -172,7 +176,7 @@
 						<option value = "luigi">samus</option>
 						<option value = "luigi">metal sonic</option>
 					</select>
-				</label>
+				</label> -->
 
 
 				<label>
