Collctable rings, fast loops

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -67,6 +67,8 @@
 				</table>
 			</div>
 
+			[[rings]]
+
 			<div class = "titlecard [[animation]]">
 
 				<div class = "titlecard-field"></div>
@@ -126,21 +128,21 @@
 					<span class = "button ps-o"></span>
 					/ <span class = "button xb-b"></span>
 					/ <b>ctrl</b>
-					- run
+					- <span class= "alert">remove speed limit (hold)</span>
 				</span>
 
 				<span class = "button-index">
 					<span class = "button ps-l1"></span>
 					/ <span class = "button xb-lb"></span>
 					/ <b>ctrl</b>
-					- run
+					- <span class= "alert">remove speed limit (hold)</span>
 				</span>
 
 				<span class = "button-index">
 					<span class = "button ps-r1"></span>
 					/ <span class = "button xb-rb"></span>
 					/ <b>shift</b>
-					- brakes
+					- brakes (hold)
 				</span>
 
 
