--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -188,6 +188,11 @@
 
 
 				<label>
+					<small>enable audio</small>
+					<input type = "checkbox" cv-bind = "audio" value = "1" />
+				</label>
+
+				<label>
 					<small>player can stop on walls</small>
 					<input type = "checkbox" cv-bind = "stayStuck" value = "1" />
 				</label>
