--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -3,7 +3,7 @@
 		<span class = "sean-icon"></span>
 		<h1>Pixel Physics</h1>
 	</div>
-	<div class = "viewport [[fullscreen]]" cv-ref = "viewport" tabindex="0">
+	<div class = "viewport [[fullscreen]]" cv-ref = "viewport" tabindex="0" cv-on = "click(event)">
 
 		<svg><defs>
 			<filter id="motionBlur">
@@ -131,6 +131,9 @@
 					</div>
 				</div>
 
+			</div>
+			<div class = "topLine">
+				<div class = "status-message">[[topLine]]</div>
 			</div>
 			<div class = "focus-me">
 				<div class = "status-message">[[focusMe]]</div>
