Spindash, 3d objects, power up glow

--- a/app/viewport/layer.html
+++ b/app/viewport/layer.html
@@ -1,1 +1,1 @@
-<div class = "viewport-background" cv-each = "blocks:block:b" cv-ref = "background" data-layer = "[[layerId]]">[[block]]</div>
+<div data-name = "[[name]]" class = "viewport-background" cv-each = "blocks:block:b" cv-ref = "background" data-layer = "[[layerId]]">[[block]]</div>
