--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -177,7 +177,7 @@
 		</div>
 
 		<div class = "viewport-double-zoom">
-			<div class = "hud">
+<!-- 			<div class = "hud">
 				<table>
 
 					<tr>
@@ -240,7 +240,7 @@
 					</tr>
 
 				</table>
-			</div>
+			</div> -->
 			<div class = "titlecard [[animation]]">
 
 				<div class = "titlecard-field"></div>
