Basic light dash physics.

--- a/app/cards/basic-controls.html
+++ b/app/cards/basic-controls.html
@@ -16,7 +16,7 @@
 	<span class = "button ps-o"></span>
 	/ <span class = "button xb-b"></span>
 	/ <b>ctrl</b>
-	- <span>run (hold)</span>
+	- <span>spindash (sonic)</span>
 </span>
 
 <span class = "button-index">
