--- a/app/cards/basic-moves.html
+++ b/app/cards/basic-moves.html
@@ -2,4 +2,4 @@
 
 <p><span class = "arrow-button arrow-north"></span> + <b>jump</b> - disengage vehicle</p>
 
-<p><span class = "arrow-button arrow-south"></span> + <b>jump</b> - spindash</p>
+<!-- <p><span class = "arrow-button arrow-south"></span> + <b>jump</b> - spindash</p> -->
